--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1053,6 +1053,11 @@ de:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+      residency_status:
+        before_the_asylum_decision: Before the asylum decision
+        with_a_residence_permit: With a residence permit
+        with_deportation_decision: With deportation decision
+        with_temporary_suspension_of_deportation: With temporary suspension of deportation
   formtastic:
     required: required
   free: 
@@ -1130,6 +1135,7 @@ de:
         language: Sprache
         sort: Sortieren nach
         target_audience: Hilfe für wen?
+        residency_status: Aufenthaltsstatus
       option_any: egal
       pagination:
         back: Zurück
@@ -1481,6 +1487,18 @@ de:
             parents: für Eltern
             pregnant_woman: für Schwangere
             relatives: für Bekannte und Verwandte
+            family_everyone: 
+            refugees_children: für geflüchtete Kinder
+            refugees_families: für geflüchtete Familien
+            refugees_general: für Flüchtlinge
+            refugees_parents: für geflüchtete Eltern
+            refugees_parents_to_be: für geflüchtete werdende Eltern
+            refugees_uf: für unbegleitete Flüchtlinge
+          residency_status:
+            before_the_asylum_decision: im Asylverfahren
+            with_a_residence_permit: mit Aufenthaltserlaubnis
+            with_deportation_decision: mit Abschiebebescheid
+            with_temporary_suspension_of_deportation: mit Duldung
       map_sidebar:
         map_output_searchresults: Kartenausgabe der Suchergebnisse
       noscript_warning: |
@@ -1786,6 +1804,29 @@ de:
           zu finden. Wir helfen dir dabei. Wenn es um Familienthemen geht, suche
           auf clarat family. Wenn es um Flüchtlingsthemen geht, suche auf clarat
           refugees.
+      callout:
+        how:
+          text: "Gib dein Problem in das Suchfeld ein und den Ort, an dem du suchst. Klicke auf die Lupe. Du bekommst die Hilfen in deiner Nähe auf einen Blick angezeigt. \n"
+          heading: 
+        what:
+          heading: Was findest du hier?
+          text: "Alle Infos zu Hilfen in deiner Nähe. Bei Problemen aus folgenden Bereichen: Familie, Gesundheit, Lernen & Arbeiten und Gewalt & Kriminalität. \n"
+        who:
+          heading: Wer findet hier Hilfe?
+          text: 
+        family:
+          who:
+            text: Alle Familien in Deutschland. Eltern, ihre Kinder und Schwangere finden hier Hilfe. Und auch Freunde und Verwandte.
+          how:
+            heading: Wie funktioniert clarat family?
+        "#{@current_section}":
+          who:
+            text: 
+        refugees:
+          how:
+            heading: Wie funktioniert clarat refugees?
+          who:
+            text: Alle Menschen, die nach Deutschland geflüchtet sind. Auch geflüchtete Kinder und Jugendliche. Und Menschen, die Hilfe für Flüchtlinge suchen.
     impressum:
       heading: Impressum
       notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
