--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -731,6 +731,11 @@ pl:
       sort_order:
         nearby: Blisko
         relevance: W związku z tematem
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -803,6 +808,7 @@ pl:
         language: Język
         sort: Sortuj według
         target_audience: Pomoc dla kogo?
+        residency_status: 
       option_any: obojętne
       pagination:
         back: Wróć
@@ -1124,6 +1130,18 @@ pl:
             parents: dla rodziców
             pregnant_woman: Dla kobiet w ciąży
             relatives: dla znajomych i krewnych
+            family_everyone: 
+            refugees_children: dla uchodźców-dzieci
+            refugees_families: dla uchodźców-rodzin
+            refugees_general: dla uchodźców
+            refugees_parents: dla uchodźców-rodziców
+            refugees_parents_to_be: dla zbiegłych przyszłych rodziców
+            refugees_uf: dla niepełnoletnich uchodźców bez opieki
+          residency_status:
+            before_the_asylum_decision: w trakcie procedury azylowej
+            with_a_residence_permit: z pozwoleniem na pobyt
+            with_deportation_decision: z zawiadomieniem o deportacji
+            with_temporary_suspension_of_deportation: z pobytem tolerowanym
       map_sidebar:
         map_output_searchresults: Widok wyników wyszukiwania na mapie
       noscript_warning: Przykro nam, Twoja wyszukiwarka musi mieć aktywny JavaScript, abyś mógł rozpocząć wyszukiwanie.
@@ -1367,6 +1385,29 @@ pl:
       why:
         heading: Dlaczego istnieje clarat?
         text: Z clarat można łatwo znaleźć pomoc. W Niemczech jest bardzo dużo ofert wspomagających dzieci, młodzież i rodziny. Również wiele ofert dla uchodźców. Często są one trudne do znalezienia. My Ci w tym pomożemy. Jeżeli chodzi o zagadnienia rodzinne, szukaj w clarat family. Jeśli o sprawy uchodźców, szukaj w clarat refugees.
+      callout:
+        how:
+          text: 
+          heading: 
+        what:
+          heading: 
+          text: 
+        who:
+          heading: 
+          text: 
+        family:
+          who:
+            text: 
+          how:
+            heading: 
+        "#{@current_section}":
+          who:
+            text: 
+        refugees:
+          how:
+            heading: 
+          who:
+            text: 
     impressum:
       heading: Impressum
       notice: Clarat jest wyszukiwarką. Clarat powie Ci, gdzie można uzyskać pomoc. Na przykład, gdzie znaleźć eksperta, który pomoże Ci z Twoim problemem.. Sam clarat pomoże Ci tylko w poszukiwaniach.
